infrastructure/kubernetes/charts/descheduler.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: descheduler
  namespace: descheduler
