infrastructure/kubernetes/charts/bluesky-pds.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluesky-pds
  namespace: bluesky-pds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluesky-pds-app-bluesky-pds-deployment-c861ae04
  namespace: bluesky-pds
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: bluesky-pds-app-bluesky-pds-deployment-c8f5e614
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: bluesky-pds-app-bluesky-pds-deployment-c8f5e614
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PDS_HOSTNAME
              value: at.drigs.org
            - name: PDS_JWT_SECRET
              valueFrom:
                secretKeyRef:
                  key: password
                  name: bluesky-pds-jwt-secret-c818f13e
            - name: PDS_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: bluesky-pds-admin-password-c847bc3c
            - name: PDS_PLC_ROTATION_KEY_K256_PRIVATE_KEY_HEX
              valueFrom:
                secretKeyRef:
                  key: password
                  name: bluesky-pds-plc-rotation-key-c8d306ef
            - name: PDS_DATA_DIRECTORY
              value: /pds
            - name: PDS_BLOBSTORE_DISK_LOCATION
              value: /pds/blocks
            - name: PDS_DID_PLC_URL
              value: https://plc.directory
            - name: PDS_BSKY_APP_VIEW_URL
              value: https://api.bsky.app
            - name: PDS_BSKY_APP_VIEW_DID
              value: did:web:api.bsky.app
            - name: PDS_REPORT_SERVICE_URL
              value: https://mod.bsky.app
            - name: PDS_REPORT_SERVICE_DID
              value: did:plc:ar7c4by46qjdydhdevvrndac
            - name: PDS_CRAWLERS
              value: https://bsky.network
            - name: PDS_SERVICE_HANDLE_DOMAINS
              value: .drigs.org
            - name: LOG_ENABLED
              value: "true"
          image: ghcr.io/bluesky-social/pds:0.4
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          startupProbe:
            failureThreshold: 3
            tcpSocket:
              port: 3000
          volumeMounts:
            - mountPath: /pds
              name: pvc-bluesky-pds-app-data-pvc-c88bf852
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-bluesky-pds-app-data-pvc-c88bf852
          persistentVolumeClaim:
            claimName: bluesky-pds-app-data-pvc-c88bf852
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: bluesky-pds-app-service-c83d1dd2
  namespace: bluesky-pds
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: bluesky-pds-app-bluesky-pds-deployment-c8f5e614
  type: ClusterIP
