infrastructure/kubernetes/charts/enshrouded.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: enshrouded
  namespace: enshrouded
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enshrouded-deployment-c815c7bb
  namespace: enshrouded
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: enshrouded-deployment-c828371b
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: enshrouded-deployment-c828371b
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: SERVER_NAME
              value: Drigtopia
            - name: SERVER_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: credential
                  name: enshrouded-server-secret-c88cf12f
            - name: SERVER_SLOTS
              value: "6"
          image: sknnr/enshrouded-dedicated-server:latest
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 15636
              name: server
            - containerPort: 15637
              name: query
          resources:
            limits:
              cpu: 8000m
              memory: 16384Mi
            requests:
              cpu: 2000m
              memory: 4096Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsGroup: 10000
            runAsNonRoot: false
            runAsUser: 10000
          volumeMounts:
            - mountPath: /home/steam/enshrouded/savegame
              name: pvc-enshrouded-server-data-c8886b5f
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroup: 10000
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-enshrouded-server-data-c8886b5f
          persistentVolumeClaim:
            claimName: enshrouded-server-data-c8886b5f
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: enshrouded-service-c874985d
  namespace: enshrouded
spec:
  externalIPs: []
  ports:
    - name: server
      port: 15636
      protocol: UDP
      targetPort: 15636
    - name: query
      port: 15637
      protocol: UDP
      targetPort: 15637
  selector:
    cdk8s.io/metadata.addr: enshrouded-deployment-c828371b
  type: LoadBalancer
