infrastructure/kubernetes/charts/palworld.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: palworld
  namespace: palworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: palworld-app-deployment-c8ecafc9
  namespace: palworld
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: palworld-app-deployment-c8ef88b0
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: palworld-app-deployment-c8ef88b0
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: palworld-admin-password-c8fbd9b9
            - name: SERVER_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: palworld-server-secret-c840df6b
          image: thijsvanloef/palworld-server-docker:latest
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 8211
              name: server
              protocol: UDP
            - containerPort: 25575
              name: rcon
              protocol: TCP
            - containerPort: 27015
              name: query
              protocol: UDP
          resources:
            limits:
              cpu: 8000m
              memory: 16384Mi
            requests:
              cpu: 4000m
              memory: 8192Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /palworld
              name: pvc-palworld-media-c85b098f
            - mountPath: /palworld/Pal/Saved/Config/LinuxServer/PalWorldSettings.ini
              name: configmap-palworld-app-server-cfg-c8c17b74
              subPath: PalWorldSettings.ini
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-palworld-media-c85b098f
          persistentVolumeClaim:
            claimName: palworld-media-c85b098f
            readOnly: false
        - configMap:
            name: palworld-app-server-cfg-c8c17b74
          name: configmap-palworld-app-server-cfg-c8c17b74
---
apiVersion: v1
kind: Service
metadata:
  name: palworld-app-service-c8b1e6d7
  namespace: palworld
spec:
  externalIPs: []
  ports:
    - name: server
      port: 8211
      protocol: UDP
      targetPort: 8211
    - name: rcon
      port: 25575
      protocol: TCP
      targetPort: 25575
    - name: query
      port: 27015
      protocol: UDP
      targetPort: 27015
  selector:
    cdk8s.io/metadata.addr: palworld-app-deployment-c8ef88b0
  type: LoadBalancer
