infrastructure/kubernetes/charts/tplink-plug-exporter.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tplink-plug-exporter
  namespace: tplink-plug-exporter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tplink-plug-exporter-app-c80a083d
  namespace: tplink-plug-exporter
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: tplink-plug-exporter-app-c8a6dfc7
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: tplink-plug-exporter-app-c8a6dfc7
    spec:
      automountServiceAccountToken: false
      containers:
        - image: fffonion/tplink-plug-exporter
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 9233
              name: metrics
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 524288Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: tplink-plug-exporter-service-c893c08b
  namespace: tplink-plug-exporter
spec:
  externalIPs: []
  ports:
    - name: metrics
      port: 9233
      targetPort: 9233
  selector:
    cdk8s.io/metadata.addr: tplink-plug-exporter-app-c8a6dfc7
  type: ClusterIP
