infrastructure/kubernetes/charts/valheim-old.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valheim-old-app-deployment-c8958575
  namespace: valheim
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: valheim-old-app-deployment-c87e5702
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: valheim-old-app-deployment-c87e5702
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: SERVER_NAME
              value: Drig Town USA
            - name: WORLD_NAME
              value: Drig Town USA
            - name: SERVER_PASS
              valueFrom:
                secretKeyRef:
                  key: credential
                  name: valheim-old-server-secret-c8f8c0b8
            - name: PUID
              value: "0"
            - name: GUID
              value: "0"
            - name: BACKUPS_ENABLED
              value: "true"
            - name: SUPERVISOR_HTTP
              value: "true"
            - name: SUPERVISOR_HTTP_USER
              value: supervisor
            - name: SUPERVISOR_HTTP_PASS
              valueFrom:
                secretKeyRef:
                  key: credential
                  name: valheim-old-supervisor-secret-c8aa65a2
          image: ghcr.io/lloesche/valheim-server:latest
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 2456
              name: server
              protocol: UDP
            - containerPort: 2457
              name: rcon
              protocol: UDP
            - containerPort: 9001
              name: supervisor
              protocol: TCP
          resources:
            limits:
              cpu: 8000m
              memory: 16384Mi
            requests:
              cpu: 2000m
              memory: 4096Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 0
          volumeMounts:
            - mountPath: /config
              name: pvc-valheim-old-server-config-c8b0ee82
            - mountPath: /opt/valheim
              name: pvc-valheim-old-server-data-c8f7a7ae
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-valheim-old-server-config-c8b0ee82
          persistentVolumeClaim:
            claimName: valheim-old-server-config-c8b0ee82
            readOnly: false
        - name: pvc-valheim-old-server-data-c8f7a7ae
          persistentVolumeClaim:
            claimName: valheim-old-server-data-c8f7a7ae
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: valheim-old-app-service-c8a54b63
  namespace: valheim
spec:
  externalIPs: []
  ports:
    - name: server
      port: 2456
      protocol: UDP
      targetPort: 2456
    - name: rcon
      port: 2457
      protocol: UDP
      targetPort: 2457
  selector:
    cdk8s.io/metadata.addr: valheim-old-app-deployment-c87e5702
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: valheim-old-app-supervisor-service-c847faaa
  namespace: valheim
spec:
  externalIPs: []
  ports:
    - port: 9001
      protocol: TCP
  selector:
    cdk8s.io/metadata.addr: valheim-old-app-deployment-c87e5702
  type: ClusterIP
