infrastructure/kubernetes/charts/audiobookshelf.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf-deployment-c8c158cf
  namespace: audiobookshelf
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: audiobookshelf-deployment-c8981d78
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: audiobookshelf-deployment-c8981d78
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/ghcr.io/advplyr/audiobookshelf:2.7.1
          imagePullPolicy: Always
          name: audiobookshelf
          ports:
            - containerPort: 13378
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 200m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /media
              name: media
            - mountPath: /config
              name: pvc-audiobookshelf-config-pvc-c87d9861
            - mountPath: /metadata
              name: pvc-audiobookshelf-metadata-pvc-c8b4f802
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: media
          nfs:
            path: /mnt/WD-6D-8T/fin
            server: 10.0.10.180
        - name: pvc-audiobookshelf-config-pvc-c87d9861
          persistentVolumeClaim:
            claimName: audiobookshelf-config-pvc-c87d9861
            readOnly: false
        - name: pvc-audiobookshelf-metadata-pvc-c8b4f802
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata-pvc-c8b4f802
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf-service-c8663952
  namespace: audiobookshelf
spec:
  externalIPs: []
  ports:
    - port: 13378
      targetPort: 80
  selector:
    cdk8s.io/metadata.addr: audiobookshelf-deployment-c8981d78
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: audiobookshelf-ingress-c8731c5e
  namespace: audiobookshelf
spec:
  ingressClassName: nginx
  rules:
    - host: audiobookshelf.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: audiobookshelf-service-c8663952
                port:
                  number: 13378
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - audiobookshelf.us-drig-1.drigs.org
      secretName: audiobook-audiobookshelf-service-c8663952-tls-c88a86be
