infrastructure/kubernetes/charts/jellyfin.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  namespace: jellyfin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-deployment-c8d9d037
  namespace: jellyfin
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: jellyfin-deployment-c8e9d4e2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: jellyfin-deployment-c8e9d4e2
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/jellyfin:10.8.13
          imagePullPolicy: Always
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http
          resources:
            limits:
              gpu.intel.com/i915: "1"
              cpu: 4000m
              memory: 8192Mi
            requests:
              gpu.intel.com/i915: "1"
              cpu: 500m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /config
              name: pvc-jellyfin-config-pvc-c8ddd027
            - mountPath: /media
              name: media
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-jellyfin-config-pvc-c8ddd027
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc-c8ddd027
            readOnly: false
        - name: media
          nfs:
            path: /mnt/WD-6D-8T/fin
            server: 10.0.10.180
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service-c8e0992d
  namespace: jellyfin
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8096
      targetPort: 8096
  selector:
    cdk8s.io/metadata.addr: jellyfin-deployment-c8e9d4e2
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
  name: jellyfin-ingress-c84bf669
  namespace: jellyfin
spec:
  ingressClassName: nginx
  rules:
    - host: fin.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: jellyfin-service-c8e0992d
                port:
                  number: 8096
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - fin.us-drig-1.drigs.org
      secretName: jellyfin-jellyfin-service-c8e0992d-tls-c81b43ca
